<resources>
    <string name="app_name">crypto_project</string>

    <!-- COMMON TEXT -->
    <string name="email_hint">Email</string>
    <string name="user_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="password_confirmation_hint">Password Confirmation</string>
    <string name="empty_field">Este campo no puede estar vacío.</string>
    <string name="email_error">Introduce un email válido.</string>
    <string name="user_length">Introduce mínimo 3 carácteres</string>
    <string name="password_error">Introduce una contraseña válida.</string>

    <!-- NAVIGATION MENU -->
    <string name="navigation_worst_cryptos">Peores Cryptos</string>
    <string name="navigation_exchanges">Exchanges</string>
    <string name="navigation_cryptos">Cryptos</string>
    <string name="navigation_best_cryptos">Mejores Cryptos</string>

    <!-- ITEM COINS -->
    <string name="crypto_percent">%1$s, %2$s</string>

    <!-- TEXT PERCENTAGE FORMAT -->
    <string name="percentage_negative">-,%1$s,%</string>
    <string name="percentage_positive">+,%1$s,%</string>
    <string name="percentage_neutral">%1$s,%</string>

    <!-- SEARCHBAR -->
    <string name="search_label">Search</string>
    <string name="search_hint">Search</string>

    <!-- LOGIN ACTIVITY -->
    <string name="signing_login_button">Iniciar sesión</string>
    <string name="signing_register_button">Registrarse</string>
    <string name="signing_text_lines">O</string>
    <string name="signing_text_google">Continuar con Google</string>
    <string name="signing_text_facebook">Continuar con Facebook</string>
    <string name="signing_text_terms_and_conditions">Al seleccionar una, usted esta aceptando los <b>Términos y condiciones</b> y <b>Póliticas de Privacidad</b> de esta App <font color="#ED1C24">+18</font></string>

    <!-- REGISTER ACTIVITY -->
    <string name="register_password_confirmation_error">Las contraseñas no coinciden.</string>
    <string name="login_text_button">Iniciar sesión</string>
    <string name="register_text_button">Registrarse</string>

    <!-- EXCHANGE ITEM -->
    <string name="exchange_created_in">%1s en %1s</string>
    <string name="exchange_year_title">- Creado en :</string>
    <string name="exchange_volume_title">- Volúmen de tradeos :</string>
    <string name="exchange_rating_stars">%1s / 10</string>
    <string name="exchange_url"><u>Acceder a la plataforma</u></string>

    <!-- BOARDING TEXTS -->
    <string name="first_title">¡Encuentra tus cryptos!</string>
    <string name="first_description">Utiliza nuestro buscador ya sea escribiendo o mediante voz</string>
    <string name="second_title">¡Puedes ver los rankings!</string>
    <string name="second_description">Descubre las que mejor o peor lo han hecho en las últimas 24h</string>
    <string name="third_title">¡Descubre donde comprarlas!</string>
    <string name="third_description">Tendrás una lista de las plataformas donde comprarlas y ver la valoración de los usuarios</string>
</resources>